--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
     font-family: "Poppins", sans-serif;
     margin: 0;
     min-height: 100vh;
+    padding: 20px;
 }
 
 input {
@@ -37,6 +38,7 @@ input {
     padding: 1rem;
     margin-bottom: 2rem;
     width: 400px;
+    width: 100%;
 }
 
 input::placeholder {
@@ -57,6 +59,8 @@ input:focus {
     width: 60% !important; 
     max-width: 800px !important; 
     margin-top: 20px; 
+    width: 100%;
+    padding: 2rem;
 }
 
 
@@ -116,6 +120,8 @@ input:focus {
     margin-top: 20px;
     padding: 15px;
     max-width: 800px;
+    width: 100%; 
+    max-width: none;
 }
 
 .repo-card h3 {
@@ -149,6 +155,7 @@ input:focus {
     margin-top: 20px;
     align-self: center;
     padding: 5rem;
+    padding: 1rem;
 }
 
 .repo-card {
@@ -185,6 +192,7 @@ main {
 }
 #pagination {
     margin-top: 20px;
+    margin-top: 10px;
 }
 
 button {
@@ -235,6 +243,7 @@ select {
     margin-bottom: 2rem;
     width: 400px;
     border-right: none;
+    border-radius: 10px;
 }
 
 #search-icon {
@@ -247,6 +256,8 @@ select {
 
 .search-container {
     position: relative;
+    flex-direction: column; /* Stack elements vertically for smaller screens */
+    align-items: stretch;
 }
 
 .repo-skills {
@@ -265,6 +276,7 @@ select {
     cursor: pointer;
     font-size: 14px;
     transition: background-color 0.3s ease;
+    width: auto;
 }
 
 .skill-button:hover {
@@ -288,6 +300,7 @@ select {
     padding: 0.25rem 0.5rem;
     text-decoration: none;
     transition: background-color 0.3s ease;
+    width: auto;
 }
 
 .repo-link:hover {
